Fix top navbar on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -62,29 +62,28 @@ h6 {
 button.fixed-width-button {
   width: 200px;
   margin-top: 1rem !important;
-  color: #DFD6B9;
+  color: #dfd6b9;
   font-size: 1rem;
   text-transform: none;
   font-family: "Alegreya Sans SC", sans-serif;
   border-radius: 0.25rem;
-  border: 1px solid var(--light-gradient, #927F61) !important;
-  background: linear-gradient(180deg, #A38E5E 0%, #6B5B38 100%) !important;
+  border: 1px solid var(--light-gradient, #927f61) !important;
+  background: linear-gradient(180deg, #a38e5e 0%, #6b5b38 100%) !important;
   box-shadow: none;
 }
 
 button.fixed-width-button-secondary {
   width: 200px;
   margin-top: 1rem !important;
-  color: #CDBE91;
+  color: #cdbe91;
   font-size: 1rem;
   text-transform: none;
   font-family: "Alegreya Sans SC", sans-serif;
   border-radius: 0.25rem;
-  border: 1px solid var(--light-gradient, #927F61);
-  background: linear-gradient(180deg, #75583E 0%, #3F2F20 100%) !important;
+  border: 1px solid var(--light-gradient, #927f61);
+  background: linear-gradient(180deg, #75583e 0%, #3f2f20 100%) !important;
   backdrop-filter: blur(5.818181037902832px);
   box-shadow: none;
-
 }
 
 .full-screen {
@@ -419,7 +418,7 @@ img.terrain.undiscovered {
 .star-icon {
   display: flex;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
   padding-right: 5px;
 }
 
@@ -516,15 +515,15 @@ img.terrain.undiscovered {
 }
 
 .custom-modal {
-  background: rgba(55, 47, 38, 0.90);
+  background: rgba(55, 47, 38, 0.9);
   backdrop-filter: blur(16px);
 
   .title {
-    background-image: url('../../public/icons/title-bg.png');
+    background-image: url("../../public/icons/title-bg.png");
     padding: 10px 50px;
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    color: #2E3A5B;
+    color: #2e3a5b;
     margin: 0 10px;
   }
 
@@ -659,5 +658,26 @@ img.yield-icon {
   }
   to {
     opacity: 1;
+  }
+}
+
+.top-navigation .mobile-only {
+  display: none;
+}
+
+.mobile-balances {
+  background: linear-gradient(180deg, rgba(168, 110, 50, 0.2) 0%, rgba(79, 38, 0, 0.2) 100%), rgba(30, 35, 40, 0.95);
+  border-left: 2px solid #927f61;
+  height: 100vh;
+  color: #fff;
+}
+
+/* Show only on mobile */
+@media (max-width: 768px) {
+  .desktop-only {
+    display: none !important;
+  }
+  .mobile-only {
+    display: block !important;
   }
 }
